After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767297 - afc: Fix iOS 7 trust dialogue handling
afc: Fix iOS 7 trust dialogue handling
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: afc backend and volume monitor
unspecified
Other All
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2016-06-06 16:36 UTC by Bastien Nocera
Modified: 2016-06-09 10:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
afc: Fix iOS 7 trust dialogue handling (1.01 KB, patch)
2016-06-06 16:36 UTC, Bastien Nocera
none Details | Review
afc: Fix iOS 7 trust dialogue handling (1.02 KB, patch)
2016-06-07 14:37 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2016-06-06 16:36:23 UTC
.
Comment 1 Bastien Nocera 2016-06-06 16:36:28 UTC
Created attachment 329205 [details] [review]
afc: Fix iOS 7 trust dialogue handling

There are new iOS 7 related error codes that we need to handle to catch
cases where a user action is required on the device.
Comment 2 Ondrej Holy 2016-06-07 11:05:23 UTC
Review of attachment 329205 [details] [review]:

::: daemon/gvfsbackendafc.c
@@ +603,3 @@
+
+    if (lerr != LOCKDOWN_E_PASSWORD_PROTECTED &&
+        lerr != LOCKDOWN_E_PAIRING_DIALOG_PENDING)

error: ‘LOCKDOWN_E_PAIRING_DIALOG_PENDING’ undeclared (first use in this function)
LOCKDOWN_E_PAIRING_DIALOG_RESPONSE_PENDING?
Comment 3 Bastien Nocera 2016-06-07 14:37:04 UTC
Created attachment 329280 [details] [review]
afc: Fix iOS 7 trust dialogue handling

There are new iOS 7 related error codes that we need to handle to catch
cases where a user action is required on the device.
Comment 4 Ondrej Holy 2016-06-08 07:38:10 UTC
Review of attachment 329280 [details] [review]:

Looks good, although I've just realized that you should also handle those error codes in g_vfs_backend_lockdownd_check.
Comment 5 Bastien Nocera 2016-06-08 11:53:08 UTC
(In reply to Ondrej Holy from comment #4)
> Review of attachment 329280 [details] [review] [review]:
> 
> Looks good, although I've just realized that you should also handle those
> error codes in g_vfs_backend_lockdownd_check.

I've done that in a separate patch in bug 763605.
Comment 6 Ondrej Holy 2016-06-08 12:35:52 UTC
Comment on attachment 329280 [details] [review]
afc: Fix iOS 7 trust dialogue handling

(In reply to Bastien Nocera from comment #5)
> (In reply to Ondrej Holy from comment #4)
> > Review of attachment 329280 [details] [review] [review] [review]:
> > 
> > Looks good, although I've just realized that you should also handle those
> > error codes in g_vfs_backend_lockdownd_check.
> 
> I've done that in a separate patch in bug 763605.

It is ok then...
Comment 7 Bastien Nocera 2016-06-09 10:00:44 UTC
Attachment 329280 [details] pushed as 409a172 - afc: Fix iOS 7 trust dialogue handling