afc: Fix iOS 7 trust dialogue handling

There are new iOS 7 related error codes that we need to handle to catch
cases where a user action is required on the device.

https://bugzilla.gnome.org/show_bug.cgi?id=767297